--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     		<div class="blurb">
         		<h1>Amar Gaonkar</h1>
 			<img src="pic.jpg">
-				<p>Welcome. This page is under construction. I am currently an Assistant Professor with the department of Mechanican ENgineering at the <a href="https://www.iitdh.ac.in">Indian Institute of Technology Dharwad</a>.</p>
+				<p>Welcome. This page is under construction. I am currently an Assistant Professor with the Department of Mechanican ENgineering at the <a href="https://www.iitdh.ac.in">Indian Institute of Technology Dharwad</a>.</p>
 
 <p>My interests: </p>
 
 <p>My brief bio: PhD from <a href="https://iitb.ac.in">IIT Bombay</a> </p>
-    		</div><!-- /.blurb -->
+			<p>MTech from <a href="https://iitb.ac.in">IIT Bombay</a></p>
+			<p>BE from <a>University of Mumbai</a></p>
 		</div><!-- /.container -->
 	</body>
 </html>
