--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <p>My interests: </p>
 
 <p>My brief bio: PhD from <a href="https://iitb.ac.in">IIT Bombay</a> </p>
-			<p>MTech from <a href="https://iitb.ac.in">IIT Bombay</a></p>
-			<p>BE from <a>University of Mumbai</a></p>
+	         MTech from <a href="https://iitb.ac.in">IIT Bombay</a>
+	         BE from <a>University of Mumbai</a>
 		</div><!-- /.container -->
 	</body>
 </html>
