--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <tbody>
     <tr>
       
-      <td style="width: 16%; text-align: center; vertical-align: top;"><a href="Salil%20Kulkarni%20-%20Projects.html">Research<br>
+      <td style="width: 16%; text-align: center; vertical-align: top;"><a href="amargaonkar%20-%20Research.html">Research<br>
 </a></td>
-      <td style="width: 16%; text-align: center; vertical-align: top;"><a href="Salil%20Kulkarni%20-%20Students.html">Courses</a></td>
-      <td style="width: 16%; text-align: center; vertical-align: top;"><a href="Salil%20Kulkarni%20-%20Courses.html"><span style="text-decoration: underline;">Publications</span></a><br>
+      <td style="width: 16%; text-align: center; vertical-align: top;"><a href="amargaonkar%20-%20Course.html">Courses</a></td>
+      <td style="width: 16%; text-align: center; vertical-align: top;"><a href="amargaonkar%20-%20Courses.html"><span style="text-decoration: underline;">Publications</span></a><br>
 </td>
-      <td style="width: 16%; text-align: center; vertical-align: top;"><a href="Salil%20Kulkarni%20-%20Publications.html">Students</a></td>
-      %<td style="text-align: center; vertical-align: top; width: 13%;"><a href="PersonalSalil.html">Personal</a></td>
+      <td style="width: 16%; text-align: center; vertical-align: top;"><a href="amargaonkar%20-%20Publications.html">Students</a></td>
+      <! td style="text-align: center; vertical-align: top; width: 13%;"><a href="PersonalSalil.html">Personal</a></td>
     </tr>
   </tbody>
 </table>
