--- a/index.html
+++ b/index.html
@@ -20,25 +20,23 @@
       <td style="width: 16%; text-align: center; vertical-align: top;"><a href="amargaonkar%20-%20Courses.html"><span style="text-decoration: underline;">Publications</span></a><br>
 </td>
       <td style="width: 16%; text-align: center; vertical-align: top;"><a href="amargaonkar%20-%20Publications.html">Students</a></td>
-      <! td style="text-align: center; vertical-align: top; width: 13%;"><a href="PersonalSalil.html">Personal</a></td>
-    </tr>
+      </tr>
   </tbody>
 </table>
 <span style="font-weight: bold;"></span><br>
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
-      <td style="text-align: left; vertical-align: top; width: 45%;"><span style="font-weight: bold;">Salil S. Kulkarni</span><br>
-Associate Professor<span style="font-weight: bold;"></span><br>
+      <td style="text-align: left; vertical-align: top; width: 45%;"><span style="font-weight: bold;">Amar K. Gaonkar</span><br>
+Assistant Professor<span style="font-weight: bold;"></span><br>
 Department of Mechanical Engineering<span style="font-weight: bold;"></span><br>
-IIT-Bombay<br>
-email : salil.kulkarni[at]iitb.ac.in<br>
-Ph: 022 2576 7513, Fax: 022 2572 6875</td>
+IIT Dharwad<br>
+email : amar.gaonkar[at]iitdh.ac.in<br>
+</td>
       <td style="width: 50%; text-align: left; vertical-align: top;"><span style="font-weight: bold;"></span><br>
-BE. Mechanical Engineering -&nbsp;COEP, Pune, 1995<br>
-ME. Mechanical Engineering - IISc, Bangalore, 1998<br>
-PhD. Theoretical and Applied Mechanics -&nbsp;Cornell University,
-Ithaca, 2003<br>
+PhD. Department of Mechanical Engineering -&nbsp;IIT Bombay<br>
+MTech. Department of Mechanical Engineering - IIT Bombay<br>
+BE. Mechanical Engineering -&nbsp;University of Mumbai<br>
       <br>
       </td>
     </tr>
@@ -47,21 +45,16 @@ Ithaca, 2003<br>
 <hr style="width: 100%; height: 2px; margin-left: 0px; margin-right: 0px;">
 <div style="text-align: justify;"><span style="font-weight: bold;">Academic
 Experience<br>
-</span>Associate Professor, Department of Mechanical Engineering, IIT
-Bombay, 2015-present<br>
 </span>Assistant Professor, Department of Mechanical Engineering, IIT
-Bombay, 2009-2015<br>
-Postdoctoral Fellow, Department of Mechanical Engineering, Northwestern
-University, 2003-06<br>
+Dharwad, 2019 - present<br>
 <br>
 <span style="font-weight: bold;">Industrial Experience</span><br>
-GE&nbsp; Global Research, Bangalore, 2008-09 <br>
-Cummins Research and Technology &nbsp;India, Pune, 2006-08<br>
-Tata Motors, Pune, 1995-96<br>
+Schlumberger Pvt Ltd, 2015-2019 <br>
+Eaton India Engineering Center;India, Pune, 2008-11<br>
 <br>
 <span style="font-weight: bold;">Research Interests</span><br>
 I am primarily interested in &nbsp;the fields of computational and
-applied mechanics.<br>
+experimental mechanics.<br>
 </div>
 <br>
 
