--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ Experience<br>
 Dharwad, 2019 - present<br>
 <br>
 <span style="font-weight: bold;">Industrial Experience</span><br>
-Schlumberger Pvt Ltd, 2015-2019 <br>
-Eaton India Engineering Center;India, Pune, 2008-11<br>
+Schlumberger Pvt Ltd; India 2015-2019 <br>
+Eaton India Engineering Center; India, 2008-2011<br>
 <br>
 <span style="font-weight: bold;">Research Interests</span><br>
 I am primarily interested in &nbsp;the fields of computational and
@@ -62,10 +62,10 @@ experimental mechanics.<br>
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
-      <td style="width: 50%; text-align: left; vertical-align: top;"><span style="font-weight: bold;"></span><span style="font-style: italic;"></span>[ <a href="http://www.me.iitb.ac.in/me/faculty/faculty_main.php"><span style="text-decoration: underline;">Faculty - Mechanical Engineering</span></a> ][<a href="http://www.me.iitb.ac.in/">Dept. of Mechanical Engineering</a>]<br>
+      <td style="width: 50%; text-align: left; vertical-align: top;"><span style="font-weight: bold;"></span><span style="font-style: italic;"></span>[ <a href="http://https://www.iitdh.ac.in/faculty.php"><span style="text-decoration: underline;"></a>]<br>
 </td>
       <td style="width: 50%; text-align: right; vertical-align: top;">©
-Salil S. Kulkarni 2017</td>
+Amar K. Gaonkar 2020</td>
     </tr>
   </tbody>
 </table>
